cluster/minio/minio_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    argocd.argoproj.io/managed-by=openshift-gitops
