cluster/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
