cluster/minio/minio_client_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-client
  namespace: minio
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
